# triton-tvm

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  triton_tvm.cpp
backend/: compiler.py  dims_stealer.py  driver.py  grid_stealer.py  name.conf
example/: add.py  softmax.py
example/matmul/: code_llvm.ll  code_triton.py  code_tt.mlir  code_ttgpu.mlir  code_ttgpu_coalesce.mlir  code_ttgpu_final.mlir  code_ttshared.mlir
example/softmax/: code_llvm.ll  code_triton.py  code_tt.mlir  code_ttgpu.mlir  code_ttshared.mlir  code_tvm.py
include/: CMakeLists.txt
include/triton-tvm/Conversion/: CMakeLists.txt
include/triton-tvm/Conversion/TritonGPUToTVM/: CMakeLists.txt  Passes.h  Passes.td  TritonGPUToTVM.h
include/triton-tvm/Dialect/TVM/IR/: Attributes.td  CMakeLists.txt  Dialect.h  Dialect.td  Ops.td  Types.td
include/triton-tvm/Dialect/TVM/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/triton-tvm/Dialect/TritonMemRef/: CMakeLists.txt  TritonMemRef.h  TritonMemRef.td
include/triton-tvm/Utils/: Builder.h  Python.h  Python.hpp
lib/Conversion/: CMakeLists.txt  LowerToTensorIdioms.cpp  MaterializeTensorsToTVMBuffers.cpp  ReplaceTritonPointersWithMemRefs.cpp  RewriteSPMDToLoops.cpp  TritonGPUToTVM.cpp  TritonGPUToTVMPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/TVM/IR/: Attributes.cpp  CMakeLists.txt  Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/TVM/Transforms/: CMakeLists.txt  ConvertToTVMScript.cpp
lib/Dialect/TritonMemRef/: CMakeLists.txt  TritonMemRef.cpp
